sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value aucunEchange
  aucunEchange=false;
  ^AlgBubbleSort1:4: error: not found: value aucunEchange
  while (!aucunEchange) {
          ^AlgBubbleSort1:5: error: not found: value aucunEchange
    aucunEchange=true;
    ^AlgBubbleSort1:9: error: not found: value aucuneEchange
            swap(i,i+1);aucuneEchange=false
                        ^